@@ -147,6 +147,34 @@ value print_version () =
   }
 ;
 
+value align_doc key s =
+  let s =
+    loop 0 where rec loop i =
+      if i = String.length s then ""
+      else if s.[i] = ' ' then loop (i + 1)
+     else String.sub s i (String.length s - i)
+  in
+  let (p, s) =
+    if String.length s > 0 then
+      if s.[0] = '<' then
+        loop 0 where rec loop i =
+          if i = String.length s then ("", s)
+          else if s.[i] <> '>' then loop (i + 1)
+          else
+            let p = String.sub s 0 (i + 1) in
+            loop (i + 1) where rec loop i =
+              if i >= String.length s then (p, "")
+              else if s.[i] = ' ' then loop (i + 1)
+              else (p, String.sub s i (String.length s - i))
+      else ("", s)
+    else ("", "")
+  in
+  let tab =
+    String.make (max 1 (13 - String.length key - String.length p)) ' '
+  in
+  p ^ tab  ^ s
+;
+
 value usage ini_sl ext_sl =
   do {
     eprintf "\
@@ -158,7 +186,9 @@ Load options:
   <object-file> Load this file in Camlp4 core.
 Other options:
   <file>        Parse this file.\n";
-    List.iter (fun (key, _, doc) -> eprintf "  %s %s\n" key doc) ini_sl;
+    List.iter
+      (fun (key, _, doc) -> eprintf "  %s %s\n" key (align_doc key doc))
+    ini_sl;
     loop (ini_sl @ ext_sl) where rec loop =
       fun
       [ [(y, _, _) :: _] when y = "-help" -> ()
@@ -166,7 +196,9 @@ Other options:
       | [] -> eprintf "  -help         Display this list of options.\n" ];
     if ext_sl <> [] then do {
       eprintf "Options added by loaded object files:\n";
-      List.iter (fun (key, _, doc) -> eprintf "  %s %s\n" key doc) ext_sl;
+      List.iter
+        (fun (key, _, doc) -> eprintf "  %s %s\n" key (align_doc key doc))
+        ext_sl;
     }
     else ();
   }
