@@ -17,10 +17,10 @@ open Stdpp;
 value split_ext = ref False;
 
 Pcaml.add_option "-split_ext" (Arg.Set split_ext)
-  "   Split EXTEND by functions to turn around a PowerPC problem.";
+  "Split EXTEND by functions to turn around a PowerPC problem.";
 
 Pcaml.add_option "-split_gext" (Arg.Set split_ext)
-  "  Old name for the option -split_ext.";
+  "Old name for the option -split_ext.";
 
 type loc = (int * int);
 
@@ -869,7 +869,7 @@ EXTEND
 END;
 
 Pcaml.add_option "-quotify" (Arg.Set quotify)
-  "     Generate code for quotations";
+  "Generate code for quotations";
 
 Pcaml.add_option "-meta_action" (Arg.Set meta_action)
-  " Undocumented";
+  "Undocumented";
