@@ -1,6 +1,9 @@
 Camlp4 Version 3.04+5
 ---------------------
 
+- [05 Feb 02] Changed the printing of options so that the option -help
+  aligns correctly their documentation. One can use now Pcaml.add_option
+  without having to calculate that.
 - [05 Feb 02] pr_r.cmo: now the option -ncip (no comments in phrases) is
   by default, because its behaviour is not 100% sure. An option -cip has
   been added to set it.
